name:                cardano-sl-blockchain-importer
version:             1.1.1
synopsis:            Blockchain Importer
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          IOHK <hi@serokell.io>
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:      Pos.BlockchainImporter.BlockchainImporterMode
                        Pos.BlockchainImporter.Configuration

                        Pos.BlockchainImporter.Core
                        Pos.BlockchainImporter.ExtraContext

                        Pos.BlockchainImporter.Tables.BestBlockTable
                        Pos.BlockchainImporter.Tables.TxsTable
                        Pos.BlockchainImporter.Tables.UtxosTable
                        Pos.BlockchainImporter.Tables.Utils

                        Pos.BlockchainImporter.Txp

                        Pos.BlockchainImporter.Recovery

                        Pos.BlockchainImporter.Web
                        Pos.BlockchainImporter.Web.Api
                        Pos.BlockchainImporter.Web.ClientTypes
                        Pos.BlockchainImporter.Web.Error
                        Pos.BlockchainImporter.Web.TestServer
                        Pos.BlockchainImporter.Web.Server
                        Pos.BlockchainImporter.Web.Transform

                        Pos.BlockchainImporter.TestUtil

                        Pos.ImporterDBConsistency.ConsistencyChecker
                        Pos.ImporterDBConsistency.Utils

                        -- Needed for testing
                        Pos.Arbitrary.BlockchainImporter

  other-modules:        Pos.BlockchainImporter.Aeson.ClientTypes

                        Pos.Binary.BlockchainImporter
                        Pos.BlockchainImporter.Core.Types
                        Pos.BlockchainImporter.Txp.Global
                        Pos.BlockchainImporter.Txp.Local
                        Pos.BlockchainImporter.Txp.Toil
                        Pos.BlockchainImporter.Txp.Toil.Logic
                        Pos.BlockchainImporter.Txp.Toil.Monad
                        Pos.BlockchainImporter.Txp.Toil.Types
                        Pos.BlockchainImporter.BListener
                        Pos.BlockchainImporter.Tables.TxAddrTable

                        Pos.ImporterDBConsistency.Properties

  build-depends:        QuickCheck
                      , aeson
                      , base
                      , bytestring
                      , base64-bytestring
                      , conduit
                      , containers
                      , data-default
                      , either
                      , errors
                      , ether >= 0.5.1
                      , exceptions
                      , formatting
                      , free
                      , generic-arbitrary
                      , lens
                      , log-warper
                      , memory
                      , mmorph
                      , opaleye == 0.6.7000.0
                      , postgresql-simple
                      , product-profunctors
                      , reflection
                      , resourcet
                      , rocksdb-haskell-ng
                      , safe-exceptions
                      , serokell-util
                      , servant-generic
                      , stm
                      , text
                      , text-format
                      , time
                      , time-units
                      , transformers
                      , universum
                      , unliftio
                      , unordered-containers
                      , vector

                      -- cardano sl
                      , cardano-sl
                      , cardano-sl-binary
                      , cardano-sl-block
                      , cardano-sl-client
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-delegation
                      , cardano-sl-generator
                      , cardano-sl-infra
                      , cardano-sl-networking
                      , cardano-sl-ssc
                      , cardano-sl-txp
                      , cardano-sl-update
                      , cardano-sl-util

                      -- mtl ++
                      , mtl

                      -- servant
                      , servant
                      , servant-server
                      , http-types

                      -- socket-io + deps
                      , socket-io
                      , engine-io
                      , engine-io-wai
                      , wai
                      , wai-extra
                      , wai-cors
                      , warp
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TemplateHaskell
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  -- FIXME: Importing the blockchain-importer from the consistency checker doesn't work
  --        if this isn't commented out. 
  --if os(linux)
  --  ghc-options:       -optl-fuse-ld=gold
  --  ld-options:        -fuse-ld=gold


executable cardano-blockchain-importer
  hs-source-dirs:      src/blockchain-importer
  main-is:             Main.hs
  other-modules:       BlockchainImporterNodeOptions
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-core
                     , cardano-sl-infra
                     , cardano-sl-blockchain-importer
                     , cardano-sl-networking
                     , cardano-sl-update
                     , cardano-sl-util
                     , formatting
                     , log-warper
                     , optparse-applicative
                     , postgresql-simple
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable cardano-importer-db-consistency
  hs-source-dirs:      src/importer-db-consistency
  main-is:             Main.hs
  other-modules:       ImporterDBConsistencyNodeOptions
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-db
                     , cardano-sl-infra
                     , cardano-sl-blockchain-importer
                     , cardano-sl-networking
                     , cardano-sl-update
                     , cardano-sl-util
                     , cardano-sl-blockchain-importer
                     , formatting
                     , log-warper
                     , optparse-applicative
                     , postgresql-simple
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable cardano-importer-swagger
  hs-source-dirs:      src/documentation
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , cardano-sl-blockchain-importer
                     , lens
                     , optparse-applicative
                     , servant-multipart
                     , servant-server
                     , servant-swagger
                     , swagger2
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   NoImplicitPrelude
                        BangPatterns
                        OverloadedStrings
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable cardano-blockchain-importer-mock
  hs-source-dirs:      src/mock
  main-is:             Main.hs
  other-modules:
  build-depends:       base
                     , cardano-sl-blockchain-importer
                     , optparse-applicative
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

test-suite cardano-blockchain-importer-test
  main-is:             Test.hs
  other-modules:
                       -- Standard module with some magic
                       Spec
                       -- Utils
                       Test.Pos.BlockchainImporter.MockFactory
                       -- Tests
                       Test.Pos.BlockchainImporter.Web.ServerSpec

                       -- Test.Pos.BlockchainImporter.BListenerSpec -- TODO(KS): To merge when we merge tests.
                       Test.Pos.BlockchainImporter.Identity.BinarySpec

  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , cardano-sl
                     , cardano-sl-block
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-blockchain-importer
                     , cardano-sl-txp
                     , cardano-sl-util
                     , containers
                     , cryptonite
                     , data-default
                     , engine-io
                     , hspec
                     , lens
                     , log-warper
                     , MonadRandom
                     , mtl
                     , universum >= 0.1.11
                     , warp
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark cardano-blockchain-importer-bench
  hs-source-dirs:      bench
  main-is:             Main.hs
  other-modules:       Bench.Pos.BlockchainImporter.ServerBench
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , cardano-sl
                     , cardano-sl-core
                     , cardano-sl-blockchain-importer
                     , cardano-sl-txp
                     , criterion
                     , data-default
                     , lens
                     , text-format
                     , universum >= 0.1.11
                     , weigh
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
