name:                cardano-sl-postgres-consistency
version:             1.1.1
synopsis:            Blockchain Importer
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          IOHK <hi@serokell.io>
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:      Pos.PostgresConsistency.BlockchainImporterMode
                        Pos.PostgresConsistency.Configuration

                        Pos.PostgresConsistency.Core
                        Pos.PostgresConsistency.ExtraContext

                        Pos.PostgresConsistency.Tables.PendingTxsTable

                        Pos.PostgresConsistency.Txp

                        Pos.PostgresConsistency.Web
                        Pos.PostgresConsistency.Web.Api
                        Pos.PostgresConsistency.Web.ClientTypes
                        Pos.PostgresConsistency.Web.Error
                        Pos.PostgresConsistency.Web.TestServer
                        Pos.PostgresConsistency.Web.Server
                        Pos.PostgresConsistency.Web.Transform

                        Pos.PostgresConsistency.TestUtil

                        -- Needed for testing
                        Pos.Arbitrary.PostgresConsistency

  other-modules:        Pos.PostgresConsistency.Aeson.ClientTypes

                        Pos.Binary.PostgresConsistency
                        Pos.PostgresConsistency.Core.Types
                        Pos.PostgresConsistency.Txp.Global
                        Pos.PostgresConsistency.Txp.Local
                        Pos.PostgresConsistency.Txp.Toil
                        Pos.PostgresConsistency.Txp.Toil.Logic
                        Pos.PostgresConsistency.Txp.Toil.Monad
                        Pos.PostgresConsistency.Txp.Toil.Types
                        Pos.PostgresConsistency.BListener
                        Pos.PostgresConsistency.Tables.Utils
                        Pos.PostgresConsistency.Tables.BestBlockTable
                        Pos.PostgresConsistency.Tables.TxsTable
                        Pos.PostgresConsistency.Tables.TxAddrTable
                        Pos.PostgresConsistency.Tables.UtxosTable

  build-depends:        QuickCheck
                      , aeson
                      , base
                      , bytestring
                      , base64-bytestring
                      , conduit
                      , containers
                      , data-default
                      , either
                      , errors
                      , ether >= 0.5.1
                      , exceptions
                      , formatting
                      , free
                      , generic-arbitrary
                      , lens
                      , log-warper
                      , memory
                      , mmorph
                      , opaleye == 0.6.7000.0
                      , postgresql-simple
                      , product-profunctors
                      , reflection
                      , resourcet
                      , rocksdb-haskell-ng
                      , safe-exceptions
                      , serokell-util
                      , servant-generic
                      , stm
                      , text
                      , text-format
                      , time
                      , time-units
                      , transformers
                      , universum
                      , unliftio
                      , unordered-containers
                      , vector

                      -- cardano sl
                      , cardano-sl
                      , cardano-sl-binary
                      , cardano-sl-block
                      , cardano-sl-client
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-delegation
                      , cardano-sl-generator
                      , cardano-sl-infra
                      , cardano-sl-networking
                      , cardano-sl-ssc
                      , cardano-sl-txp
                      , cardano-sl-update
                      , cardano-sl-util

                      -- mtl ++
                      , mtl

                      -- servant
                      , servant
                      , servant-server
                      , http-types

                      -- socket-io + deps
                      , socket-io
                      , engine-io
                      , engine-io-wai
                      , wai
                      , wai-extra
                      , wai-cors
                      , warp
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TemplateHaskell
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold


executable cardano-postgres-consistency
  hs-source-dirs:      src/postgres-consistency
  main-is:             Main.hs
  other-modules:       BlockchainImporterNodeOptions
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-core
                     , cardano-sl-infra
                     , cardano-sl-postgres-consistency
                     , cardano-sl-networking
                     , cardano-sl-update
                     , cardano-sl-util
                     , formatting
                     , log-warper
                     , optparse-applicative
                     , postgresql-simple
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable cardano-importer-swagger
  hs-source-dirs:      src/documentation
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , cardano-sl-postgres-consistency
                     , lens
                     , optparse-applicative
                     , servant-multipart
                     , servant-server
                     , servant-swagger
                     , swagger2
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   NoImplicitPrelude
                        BangPatterns
                        OverloadedStrings
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

executable cardano-postgres-consistency-mock
  hs-source-dirs:      src/mock
  main-is:             Main.hs
  other-modules:
  build-depends:       base
                     , cardano-sl-postgres-consistency
                     , optparse-applicative
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

test-suite cardano-postgres-consistency-test
  main-is:             Test.hs
  other-modules:
                       -- Standard module with some magic
                       Spec
                       -- Utils
                       Test.Pos.PostgresConsistency.MockFactory
                       -- Tests
                       Test.Pos.PostgresConsistency.Web.ServerSpec

                       -- Test.Pos.PostgresConsistency.BListenerSpec -- TODO(KS): To merge when we merge tests.
                       Test.Pos.PostgresConsistency.Identity.BinarySpec

  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , cardano-sl
                     , cardano-sl-block
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-postgres-consistency
                     , cardano-sl-txp
                     , cardano-sl-util
                     , containers
                     , cryptonite
                     , data-default
                     , engine-io
                     , hspec
                     , lens
                     , log-warper
                     , MonadRandom
                     , mtl
                     , universum >= 0.1.11
                     , warp
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark cardano-postgres-consistency-bench
  hs-source-dirs:      bench
  main-is:             Main.hs
  other-modules:       Bench.Pos.PostgresConsistency.ServerBench
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , cardano-sl
                     , cardano-sl-core
                     , cardano-sl-postgres-consistency
                     , cardano-sl-txp
                     , criterion
                     , data-default
                     , lens
                     , text-format
                     , universum >= 0.1.11
                     , weigh
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
