name:                cardano-sl-postgres-consistency
version:             1.1.1
synopsis:            Blockchain Importer
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          IOHK <hi@serokell.io>
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:      Pos.PostgresConsistency.ConsistencyChecker
                        Pos.PostgresConsistency.Utils

  other-modules:

  build-depends:        QuickCheck
                      , aeson
                      , base
                      , bytestring
                      , base64-bytestring
                      , conduit
                      , containers
                      , data-default
                      , either
                      , errors
                      , ether >= 0.5.1
                      , exceptions
                      , formatting
                      , free
                      , generic-arbitrary
                      , lens
                      , log-warper
                      , memory
                      , mmorph
                      , opaleye == 0.6.7000.0
                      , postgresql-simple
                      , product-profunctors
                      , reflection
                      , resourcet
                      , rocksdb-haskell-ng
                      , safe-exceptions
                      , serokell-util
                      , servant-generic
                      , stm
                      , text
                      , text-format
                      , time
                      , time-units
                      , transformers
                      , universum
                      , unliftio
                      , unordered-containers
                      , vector

                      -- cardano sl
                      , cardano-sl
                      , cardano-sl-binary
                      , cardano-sl-block
                      , cardano-sl-client
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-delegation
                      , cardano-sl-generator
                      , cardano-sl-infra
                      , cardano-sl-networking
                      , cardano-sl-ssc
                      , cardano-sl-txp
                      , cardano-sl-update
                      , cardano-sl-util
                      , cardano-sl-blockchain-importer

                      -- mtl ++
                      , mtl

                      -- servant
                      , servant
                      , servant-server
                      , http-types

                      -- socket-io + deps
                      , socket-io
                      , engine-io
                      , engine-io-wai
                      , wai
                      , wai-extra
                      , wai-cors
                      , warp
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TemplateHaskell
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold


executable cardano-postgres-consistency
  hs-source-dirs:      src/postgres-consistency
  main-is:             Main.hs
  other-modules:       PostgresConsistencyNodeOptions
  build-depends:       base
                     , cardano-sl
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-infra
                     , cardano-sl-postgres-consistency
                     , cardano-sl-networking
                     , cardano-sl-update
                     , cardano-sl-util
                     , cardano-sl-blockchain-importer
                     , formatting
                     , log-warper
                     , optparse-applicative
                     , postgresql-simple
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold
